force-app/main/default/objects/Case/fields/Invoice_compliance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_compliance__c</fullName>
    <inlineHelpText>To sell on Back Market, it is required that sellers provide invoices to customers in the 24h following each customer request. The invoices shall be compliant with all legal requirements applicable in the country of the customer and shall be provided via the after-sales service interface.</inlineHelpText>
    <label>Invoice compliance</label>
    <type>TextArea</type>
</CustomField>