force-app/main/default/objects/Case/fields/Invoice_decade__c.field-meta.xml
<CustomField>
    <fullName>Invoice_decade__c</fullName>
    <inlineHelpText>You shipped 35 products between the 9th and the 12th of the month. When will the invoice and the wire transfer be proceeded and sent to you?</inlineHelpText>
    <label>Invoice decade</label>
    <length>1</length>
    <type>Text</type>
</CustomField>