force-app/main/default/objects/Case/fields/Is_order_related__c.field-meta.xml
<CustomField>
    <fullName>Is_order_related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is order related</label>
    <type>Checkbox</type>
</CustomField>