force-app/main/default/objects/Case/fields/Japanese_Phones__c.field-meta.xml
<CustomField>
    <fullName>Japanese_Phones__c</fullName>
    <inlineHelpText>Do you ever sell smartphones produced for the Japanese market (sound effect when taking pictures)?</inlineHelpText>
    <label>Japanese Phones</label>
    <type>TextArea</type>
</CustomField>