force-app/main/default/objects/Case/fields/Language_Level__c.field-meta.xml
<CustomField>
    <fullName>Language_Level__c</fullName>
    <label>Language Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>