force-app/main/default/objects/Case/fields/Language_of_the_claim__c.field-meta.xml
<CustomField>
    <fullName>Language_of_the_claim__c</fullName>
    <label>Language of the claim</label>
    <type>TextArea</type>
</CustomField>