force-app/main/default/objects/Case/fields/Language_Skill__c.field-meta.xml
<CustomField>
    <fullName>Language_Skill__c</fullName>
    <label>Language Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>