force-app/main/default/objects/Case/fields/Language_Test_Refusal_reason__c.field-meta.xml
<CustomField>
    <fullName>Language_Test_Refusal_reason__c</fullName>
    <label>Language Test - Refusal reason</label>
    <type>TextArea</type>
</CustomField>