force-app/main/default/objects/Case/fields/Laptop_Macbook__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Macbook__c</fullName>
    <label>Laptop/Macbook</label>
    <length>1</length>
    <type>Text</type>
</CustomField>