force-app/main/default/objects/Case/fields/Legal_company_name__c.field-meta.xml
<CustomField>
    <fullName>Legal_company_name__c</fullName>
    <label>Legal company name</label>
    <type>TextArea</type>
</CustomField>