force-app/main/default/objects/Case/fields/Link_to_existing_report_dashboard__c.field-meta.xml
<CustomField>
    <fullName>Link_to_existing_report_dashboard__c</fullName>
    <label>Link to existing report / dashboard</label>
    <type>Url</type>
</CustomField>