force-app/main/default/objects/Case/fields/Lost_parcel__c.field-meta.xml
<CustomField>
    <fullName>Lost_parcel__c</fullName>
    <inlineHelpText>A customer contacts you due to a delivery problem. The package tracking link has not been updated for more than 5 days, the package has never been delivered. It has been lost by the carrier. What do you do?</inlineHelpText>
    <label>Lost parcel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>