force-app/main/default/objects/Case/fields/Low_battery_capacity__c.field-meta.xml
<CustomField>
    <fullName>Low_battery_capacity__c</fullName>
    <inlineHelpText>Un client a décrit son produit comme étant fonctionnel. À réception, la batterie est à 65% de sa capacité.</inlineHelpText>
    <label>Low battery capacity</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>