force-app/main/default/objects/Case/fields/Mandatory_documents__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_documents__c</fullName>
    <inlineHelpText>Quels sont les documents obligatoires pour déclencher un paiement ?</inlineHelpText>
    <label>Mandatory documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>