force-app/main/default/objects/Case/fields/Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Marketplace__c</fullName>
    <label>Marketplace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>