force-app/main/default/objects/Case/fields/Merchant_Balance__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Balance__c</fullName>
    <formula>Account.Debit_note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>