force-app/main/default/objects/Case/fields/Merchant_BizDev__c.field-meta.xml
<CustomField>
    <fullName>Merchant_BizDev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Filled by PB</inlineHelpText>
    <label>Merchant BizDev</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>