force-app/main/default/objects/Case/fields/Merchant_Notified_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Notified_by_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant Notified by Email</label>
    <type>Checkbox</type>
</CustomField>