force-app/main/default/objects/Case/fields/Merchant_Referent_Champion__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Referent_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Filled by PB</inlineHelpText>
    <label>Merchant Referent Champion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>