force-app/main/default/objects/Case/fields/Merchant_Stage__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Stage__c</fullName>
    <formula>TEXT( Account.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Stage</label>
    <type>Text</type>
</CustomField>