force-app/main/default/objects/Case/fields/Minimum_warranty_delay__c.field-meta.xml
<CustomField>
    <fullName>Minimum_warranty_delay__c</fullName>
    <inlineHelpText>What is the minimum warranty delay (in months) for your products?</inlineHelpText>
    <label>Minimum warranty delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>