force-app/main/default/objects/Case/fields/Missing_Document_s__c.field-meta.xml
<CustomField>
    <fullName>Missing_Document_s__c</fullName>
    <label>Missing/Incomplete Document(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>BM Certificate of non receipt</fullName>
            </value>
            <value>
                <fullName>Pictures of the package</fullName>
            </value>
            <value>
                <fullName>Pictures of the label</fullName>
            </value>
            <value>
                <fullName>Pictures of the device</fullName>
            </value>
            <value>
                <fullName>Police report</fullName>
            </value>
            <value>
                <fullName>Proof Of Handover</fullName>
            </value>
            <value>
                <fullName>Proof Of Delivery</fullName>
                <isActive>false</isActive>
                <label>Proof Of Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>