force-app/main/default/objects/Case/fields/Models_sold__c.field-meta.xml
<CustomField>
    <fullName>Models_sold__c</fullName>
    <label>Models sold</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>