force-app/main/default/objects/Case/fields/Monitoring_Period__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Period__c</fullName>
    <label>Monitoring Period</label>
    <type>TextArea</type>
</CustomField>