force-app/main/default/objects/Case/fields/More_stock_available_on__c.field-meta.xml
<CustomField>
    <fullName>More_stock_available_on__c</fullName>
    <label>More stock available on</label>
    <length>255</length>
    <type>Text</type>
</CustomField>