force-app/main/default/objects/Case/fields/NMO_limitation__c.field-meta.xml
<CustomField>
    <fullName>NMO_limitation__c</fullName>
    <inlineHelpText>As a new merchant on Back Market, you will enter a &quot;trial period&quot; from 4 to 8 weeks. What will be your daily sales limitation during this period?</inlineHelpText>
    <label>NMO limitation</label>
    <length>1</length>
    <type>Text</type>
</CustomField>