force-app/main/default/objects/Case/fields/Not_assigned_to_BW__c.field-meta.xml
<CustomField>
    <fullName>Not_assigned_to_BW__c</fullName>
    <formula>if( CONTAINS(Text(Owner:User.Team__c) ,&quot;Back Watch&quot;), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not assigned to BW</label>
    <type>Checkbox</type>
</CustomField>