force-app/main/default/objects/Case/fields/On_time_shipping_Ex_1__c.field-meta.xml
<CustomField>
    <fullName>On_time_shipping_Ex_1__c</fullName>
    <inlineHelpText>When do you have to ship, at the latest, a smartphone ordered on Monday at 10am?</inlineHelpText>
    <label>On-time shipping - Ex 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>