force-app/main/default/objects/Case/fields/On_time_shipping_Ex_2__c.field-meta.xml
<CustomField>
    <fullName>On_time_shipping_Ex_2__c</fullName>
    <inlineHelpText>When do you have to ship, at the latest, a MacBook/Laptop ordered on Tuesday at 9am? Knowing that Wednesday is a holiday?</inlineHelpText>
    <label>On-time shipping - Ex 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>