force-app/main/default/objects/Case/fields/Origin_Skill__c.field-meta.xml
<CustomField>
    <fullName>Origin_Skill__c</fullName>
    <label>Origin Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>BackShip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>