force-app/main/default/objects/Case/fields/Other_action__c.field-meta.xml
<CustomField>
    <fullName>Other_action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other action</label>
    <type>Checkbox</type>
</CustomField>