force-app/main/default/objects/Case/fields/Other_testing_solution__c.field-meta.xml
<CustomField>
    <fullName>Other_testing_solution__c</fullName>
    <label>Other testing solution</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>