force-app/main/default/objects/Case/fields/OwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFirstName__c</fullName>
    <formula>IF(NOT(ISBLANK(Assignee__c)), Assignee__r.FirstName, Owner:User.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerFirstName</label>
    <type>Text</type>
</CustomField>