force-app/main/default/objects/Case/fields/Oxidation__c.field-meta.xml
<CustomField>
    <fullName>Oxidation__c</fullName>
    <inlineHelpText>Do you check the oxidation state of each product you sell?</inlineHelpText>
    <label>Oxidation</label>
    <type>TextArea</type>
</CustomField>