force-app/main/default/objects/Case/fields/Payment_conditions__c.field-meta.xml
<CustomField>
    <fullName>Payment_conditions__c</fullName>
    <label>Payment conditions</label>
    <type>TextArea</type>
</CustomField>