force-app/main/default/objects/Case/fields/Payment_delay__c.field-meta.xml
<CustomField>
    <fullName>Payment_delay__c</fullName>
    <inlineHelpText>Selon la charte, de combien de temps maximum disposez-vous pour déclencher le paiement d&apos;un produit (fonctionnel ou non)?</inlineHelpText>
    <label>Payment delay</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>