force-app/main/default/objects/Case/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AirPods</fullName>
            </value>
            <value>
                <fullName>MacBook Charger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>