force-app/main/default/objects/Case/fields/Product_cluster__c.field-meta.xml
<CustomField>
    <fullName>Product_cluster__c</fullName>
    <formula>TEXT( Account.Product_cluster__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product cluster</label>
    <type>Text</type>
</CustomField>