force-app/main/default/objects/Case/fields/Products_tested_and_checked__c.field-meta.xml
<CustomField>
    <fullName>Products_tested_and_checked__c</fullName>
    <inlineHelpText>To sell on Back Market, it is required that the products listed for sale are duly tested and checked prior to their shipment to comply with the full criteria detailed in the Charter.</inlineHelpText>
    <label>Products tested and checked</label>
    <type>TextArea</type>
</CustomField>