force-app/main/default/objects/Case/fields/Proof_of_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of Payment Received</label>
    <type>Checkbox</type>
</CustomField>