force-app/main/default/objects/Case/fields/Proof_of_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Payment_Received_Date__c</fullName>
    <label>Proof of Payment Received Date</label>
    <type>Date</type>
</CustomField>