force-app/main/default/objects/Case/fields/Pseudo__c.field-meta.xml
<CustomField>
    <fullName>Pseudo__c</fullName>
    <label>Pseudo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>