force-app/main/default/objects/Case/fields/Quality_KPIs_concerned__c.field-meta.xml
<CustomField>
    <fullName>Quality_KPIs_concerned__c</fullName>
    <label>Quality KPIs concerned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BB - Cancellation rate (functional)</fullName>
            </value>
            <value>
                <fullName>BB - Charter Breach</fullName>
            </value>
            <value>
                <fullName>BB - Counter-Proposal rate (functional)</fullName>
            </value>
            <value>
                <fullName>BB - Counter-Proposal rate (non functional)</fullName>
            </value>
            <value>
                <fullName>BB - Late processing rate</fullName>
            </value>
            <value>
                <fullName>BB - Late response 24H rate</fullName>
            </value>
            <value>
                <fullName>BB - Pending order rate</fullName>
            </value>
            <value>
                <fullName>Cancellation Rate</fullName>
            </value>
            <value>
                <fullName>Counterfeit</fullName>
            </value>
            <value>
                <fullName>Counter Offer Rate</fullName>
            </value>
            <value>
                <fullName>Hazardous charger</fullName>
            </value>
            <value>
                <fullName>Invoice not compliant</fullName>
            </value>
            <value>
                <fullName>Late Processing Rate</fullName>
            </value>
            <value>
                <fullName>Late Response 24h</fullName>
            </value>
            <value>
                <fullName>Merchant payment Issue</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Payment Rate</fullName>
            </value>
            <value>
                <fullName>Pending Order Rate</fullName>
            </value>
            <value>
                <fullName>Policy Violation</fullName>
            </value>
            <value>
                <fullName>The Accessories Rate</fullName>
            </value>
            <value>
                <fullName>The Cancellation Rate</fullName>
            </value>
            <value>
                <fullName>The Contact Rate</fullName>
            </value>
            <value>
                <fullName>The CSAT Rate</fullName>
            </value>
            <value>
                <fullName>The Defective Rate</fullName>
            </value>
            <value>
                <fullName>The Delivery Rate</fullName>
            </value>
            <value>
                <fullName>The Esthetic Rate</fullName>
            </value>
            <value>
                <fullName>The Late Delivery Rate</fullName>
            </value>
            <value>
                <fullName>The Late Response Rate</fullName>
            </value>
            <value>
                <fullName>The Negative Review Rate</fullName>
            </value>
            <value>
                <fullName>The Return Tracking Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>