force-app/main/default/objects/Case/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <inlineHelpText>Among the 3 elements below, which are the 3 having the strongest impact on you quality score?</inlineHelpText>
    <label>Quality Score</label>
    <length>1</length>
    <type>Text</type>
</CustomField>