force-app/main/default/objects/Case/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <label>Question 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>