force-app/main/default/objects/Case/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <label>Question 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>