force-app/main/default/objects/Case/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <label>Question 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>