force-app/main/default/objects/Case/fields/Recipient_email_buyback__c.field-meta.xml
<CustomField>
    <fullName>Recipient_email_buyback__c</fullName>
    <label>Recipient email buyback</label>
    <type>Email</type>
</CustomField>