force-app/main/default/objects/Case/fields/Record_type__c.field-meta.xml
<CustomField>
    <fullName>Record_type__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record type (formula)</label>
    <type>Text</type>
</CustomField>