force-app/main/default/objects/Case/fields/Refund_claimed__c.field-meta.xml
<CustomField>
    <fullName>Refund_claimed__c</fullName>
    <label>Refund claimed</label>
    <type>TextArea</type>
</CustomField>