force-app/main/default/objects/Case/fields/Related_to_Oney__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Oney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related to Oney</label>
    <type>Checkbox</type>
</CustomField>