force-app/main/default/objects/Case/fields/Repair_exchange_delay__c.field-meta.xml
<CustomField>
    <fullName>Repair_exchange_delay__c</fullName>
    <inlineHelpText>Are you able to repair/exchange and ship back a product returned due to a technical problem within 3 working days?</inlineHelpText>
    <label>Repair/exchange delay</label>
    <type>TextArea</type>
</CustomField>