force-app/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Expected solution rejected</fullName>
            </value>
            <value>
                <fullName>Full merchant compensation</fullName>
            </value>
            <value>
                <fullName>General support provided to the merchant</fullName>
            </value>
            <value>
                <fullName>Partial merchant compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>