force-app/main/default/objects/Case/fields/Response_delay__c.field-meta.xml
<CustomField>
    <fullName>Response_delay__c</fullName>
    <inlineHelpText>According to the quality charter, how much time do you have to respond to a customer complaint?</inlineHelpText>
    <label>Response delay</label>
    <type>TextArea</type>
</CustomField>