force-app/main/default/objects/Case/fields/Retraction__c.field-meta.xml
<CustomField>
    <fullName>Retraction__c</fullName>
    <inlineHelpText>It has been 6 days since you received a customer&apos;s product at your return address. Indeed, this one exercised his right of retraction and returned the product to you. You realize that the product is broken and that it is thus an exclusion of warranty.</inlineHelpText>
    <label>Retraction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>