force-app/main/default/objects/Case/fields/Return_Label_Solution__c.field-meta.xml
<CustomField>
    <fullName>Return_Label_Solution__c</fullName>
    <inlineHelpText>Do you have a solution to generate a return label for customers if they need to return their product to you?</inlineHelpText>
    <label>Return Label Solution</label>
    <type>TextArea</type>
</CustomField>