force-app/main/default/objects/Case/fields/Return_Management__c.field-meta.xml
<CustomField>
    <fullName>Return_Management__c</fullName>
    <inlineHelpText>To sell on Back Market, it is required that sellers manage all returns within the required time according to the situation (withdrawal, wrong product received, product received damaged, second return, etc). Sellers shall cover the return cost for all returns except “change of mind” where the customer has to pay the equivalent of a domestic return cost. Back Market can generate the return label directly for the customer at the seller’s expense.</inlineHelpText>
    <label>Return Management</label>
    <type>TextArea</type>
</CustomField>