force-app/main/default/objects/Case/fields/Right_of_retraction__c.field-meta.xml
<CustomField>
    <fullName>Right_of_retraction__c</fullName>
    <inlineHelpText>When does a customer&apos;s right of withdrawal begin?</inlineHelpText>
    <label>Right of retraction</label>
    <type>TextArea</type>
</CustomField>