force-app/main/default/objects/Case/fields/SEPA_Offline__c.field-meta.xml
<CustomField>
    <fullName>SEPA_Offline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEPA Offline/ACH Offline</label>
    <type>Checkbox</type>
</CustomField>