force-app/main/default/objects/Case/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>To sell on Back Market, it is required that from January 2022 onward sellers provide IMEI for all smartphone orders within the 24h following each product shipment.</inlineHelpText>
    <label>Serial Number</label>
    <type>TextArea</type>
</CustomField>