force-app/main/default/objects/Case/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BackShip</fullName>
            </value>
            <value>
                <fullName>BackCare</fullName>
            </value>
            <value>
                <fullName>BackParts</fullName>
            </value>
            <value>
                <fullName>BackPack</fullName>
            </value>
            <value>
                <fullName>FBBM</fullName>
            </value>
            <value>
                <fullName>BackRepair</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Back Market for Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>