force-app/main/default/objects/Case/fields/Services_More_info__c.field-meta.xml
<CustomField>
    <fullName>Services_More_info__c</fullName>
    <inlineHelpText>Do you wish to know more about these services?</inlineHelpText>
    <label>Services - More info</label>
    <length>1</length>
    <type>Text</type>
</CustomField>