force-app/main/default/objects/Case/fields/Services_pitched__c.field-meta.xml
<CustomField>
    <fullName>Services_pitched__c</fullName>
    <inlineHelpText>Which of the following Back Market services have you heard about?</inlineHelpText>
    <label>Services pitched</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>