force-app/main/default/objects/Case/fields/Shipping_Delay_Laptop__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Delay_Laptop__c</fullName>
    <inlineHelpText>How much time do you have to ship a MacBook/PC?</inlineHelpText>
    <label>Shipping Delay - Laptop</label>
    <type>TextArea</type>
</CustomField>