force-app/main/default/objects/Case/fields/Shipping_Delay_Smartphone__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Delay_Smartphone__c</fullName>
    <inlineHelpText>How much time do you have to ship a smartphone?</inlineHelpText>
    <label>Shipping Delay - Smartphone</label>
    <type>TextArea</type>
</CustomField>