force-app/main/default/objects/Case/fields/Shipping_Delay_Tablet__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Delay_Tablet__c</fullName>
    <inlineHelpText>How much time do you have to ship a tablet?</inlineHelpText>
    <label>Shipping Delay - Tablet</label>
    <type>TextArea</type>
</CustomField>