force-app/main/default/objects/Case/fields/Shipping_Methods__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Methods__c</fullName>
    <inlineHelpText>To sell on Back Market, it is required that your shipping methods comply with the maximum shipping time, maximum delivery time and maximum shipping fees requested for each product category. To be compliant, you can also choose to use either FBBM our fulfillment offer OR Backship our transportation Service.</inlineHelpText>
    <label>Shipping methods</label>
    <type>TextArea</type>
</CustomField>