force-app/main/default/objects/Case/fields/SKU_management_in_BO__c.field-meta.xml
<CustomField>
    <fullName>SKU_management_in_BO__c</fullName>
    <label>SKU management in BO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>