force-app/main/default/objects/Case/fields/Smartphones__c.field-meta.xml
<CustomField>
    <fullName>Smartphones__c</fullName>
    <label>Smartphones</label>
    <length>1</length>
    <type>Text</type>
</CustomField>