force-app/main/default/objects/Case/fields/Speudo_on_other_marketplaces__c.field-meta.xml
<CustomField>
    <fullName>Speudo_on_other_marketplaces__c</fullName>
    <label>Speudo on other marketplaces</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>