force-app/main/default/objects/Case/fields/SSAT__c.field-meta.xml
<CustomField>
    <fullName>SSAT__c</fullName>
    <label>SSAT (1 to 5)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>