force-app/main/default/objects/Case/fields/SSAT_Template_Sent__c.field-meta.xml
<CustomField>
    <fullName>SSAT_Template_Sent__c</fullName>
    <label>SSAT Template Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>