force-app/main/default/objects/Case/fields/Start_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Start_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Round Robin</label>
    <type>Checkbox</type>
</CustomField>