force-app/main/default/objects/Case/fields/Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Status_Image__c</fullName>
    <formula>CASE( Status,
&quot;New&quot;,
IMAGE(&quot;/resource/1648645213000/GraphicsPackNew/fatcow/farmfresh/16/flag_yellow.png&quot;, &quot;NEW&quot;),
&quot;IN PROGRESS&quot;, IMAGE(&quot;/resource/1648645213000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&quot;, &quot;IN PROGRESS&quot;),
&quot;Pending Merchant Reply&quot;, IMAGE(&quot;/resource/1648645213000/GraphicsPackNew/fatcow/farmfresh/16/flag_blue.png&quot;, &quot;Pending Merchant Reply&quot;),
&quot;Pending Carrier Reply&quot;, IMAGE(&quot;/resource/1648645213000/GraphicsPackNew/fatcow/farmfresh/16/flag_purple.png&quot;, &quot;Pending Carrier Reply&quot;),
&quot;On Hold&quot;, IMAGE(&quot;/resource/1648645213000/GraphicsPackNew/fatcow/farmfresh/16/flag_orange.png&quot;, &quot;On Hold&quot;),
IMAGE(&quot;/resource/1648645213000/GraphicsPackNew/fatcow/farmfresh/16/flag_red.png&quot;, &quot;Closed&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Image</label>
    <type>Text</type>
</CustomField>