force-app/main/default/objects/Case/fields/Stock_available__c.field-meta.xml
<CustomField>
    <fullName>Stock_available__c</fullName>
    <label>Stock available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>