force-app/main/default/objects/Case/fields/Sub_reason_claim__c.field-meta.xml
<CustomField>
    <fullName>Sub_reason_claim__c</fullName>
    <label>Sub reason claim</label>
    <type>TextArea</type>
</CustomField>