force-app/main/default/objects/Case/fields/Tablets__c.field-meta.xml
<CustomField>
    <fullName>Tablets__c</fullName>
    <label>Tablets</label>
    <length>1</length>
    <type>Text</type>
</CustomField>