force-app/main/default/objects/Case/fields/Targeted_Country__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Country__c</fullName>
    <label>Targeted Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeted_Country</valueSetName>
    </valueSet>
</CustomField>