force-app/main/default/objects/Case/fields/Teams_impacted__c.field-meta.xml
<CustomField>
    <fullName>Teams_impacted__c</fullName>
    <inlineHelpText>This field is populated for case reason = Project Proposition</inlineHelpText>
    <label>Teams impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>BackWatch</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>Everyone</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Merchant Communication</fullName>
            </value>
            <value>
                <fullName>NewBiz</fullName>
            </value>
            <value>
                <fullName>QAM</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Salesforce Team</fullName>
            </value>
            <value>
                <fullName>SSM</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Team Leads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>