force-app/main/default/objects/Case/fields/Tech_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Tech_Business_Name__c</fullName>
    <formula>if( AccountId = &quot;&quot; , &quot;&quot;, AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Business_Name</label>
    <type>Text</type>
</CustomField>